# sized

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
src/sized/: __init__.py  gen.py
tests/: test_gen.py
